fix(core): 🐛 incorrect selector to disable search card animation on mobile

--- a/resources/skins.citizen.styles/components/Search.less
+++ b/resources/skins.citizen.styles/components/Search.less
@@ -123,7 +123,7 @@
 		// Remove searchbox open animation on mobile
 		// But keep suggestion animation
 		// So user can get to search instantly
-		.citizen-animations-ready & {
+		.citizen-animations-ready .citizen-menu-checkbox-checkbox:checked ~ & {
 			transition: none;
 		}
 	}
